# rust-react

./: .gitignore  README.md
actix-backend/: Cargo.toml
actix-backend/.cargo/: config.toml
actix-backend/src/polars_examples/: mod.rs
actix-backend/src/serde_examples/: mod.rs
actix-backend/static/: organizations-100.csv
actix-server/: Cargo.toml
actix-server/src/: build.rs  main.rs
actix-server/src/polars_examples/: mod.rs
actix-server/static/: organizations-100.csv  test.csv
frontend/: .env  =7.21.4  package.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx  Layout.tsx  index.css  index.tsx
frontend/src/components/common/: SplitPage.tsx  StandardLoader.tsx
frontend/src/components/home/: HomeLeft.tsx  HomeRight.tsx
frontend/src/components/polars/: PolarsAggCount.tsx  PolarsAggFilter.tsx  PolarsAllData.tsx  PolarsLeft.tsx  PolarsRight.tsx  PolarsSelectColumns.tsx  PolarsTabPanel.tsx  polarsColumnConfig.tsx
frontend/src/components/serde/: SerdeJsonMacro.tsx  SerdeLeft.tsx  SerdeRight.tsx  SerdeTabPanel.tsx  SerdeVecStruct.tsx
frontend/src/lib/: constants.ts  routes.tsx
frontend/src/lib/async/: asyncWrapper.ts  axiosConfig.ts  genericGetPromise.ts
frontend/src/pages/: Home.tsx  Polars.tsx  Serde.tsx
